# m6Arp

./: README.md  USAGE.org  inference.py  pyproject.toml  train.py
data/: .gitattributes  8079neg_newF1F2GL_fishers0.csv  8079pos_newF1F2GL_fishers0.csv  8975neg_newF1F2GL_fishers0.csv  8975pos_newF1F2GL_fishers0.csv  8989neg_newF1F2GL_fishers0.csv  8989pos_newF1F2GL_fishers0.csv  pred.csv
figures/: full_data_main.py  half_data_main.py  loading.py  make_curves.py  make_curves2.py  make_curves3.py  plotting.py  utils.py
m6arp/: loading.py
m6arp/figures/: metrics.py
m6arp/models/m6anet/: interface.py
m6arp/models/nanom6a/: interface.py
m6arp/models/ours/: interface.py  model8989.pkl
models/m6anet/: copy_reads.sh  interface.py
models/ours/: interface.py
pretrained/: model8079.pkl  model8975.pkl
